Tela 3: Finalizado layout desktop forms 2 e 3 - bugFix z-index topbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,8 @@ body {
 
     background-color: #ec362d;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.025);
+
+    z-index: 100;
 }
 h1 {
     font-size: 37px;
